syntax = "proto3";

package auth;

option go_package = "pkg/proto/auth;auth";
service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Signup(SignupRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message SignupRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}
